# drone_sec_sim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  launch_stack.py  monitor.py  pyproject.toml  requirements.txt  sim_stack.json  threat_coverage.py
.github/: dependabot.yml
docs/: API.md  FAQ.md  architecture.md  attack_realization_mapping_table.csv  bas_versions_table.csv  bas_versions_table.md  diploma_text_combined.docx  diploma_text_combined.html  drone_architecture.md  full_mapping_example_rows.csv  full_mapping_extended_rows.csv  information_flows_table.csv  object_and_attack_report.docx  object_and_attack_report.html  protection_methods_analysis.docx  protection_methods_analysis.html  protection_methods_analysis.md  quickstart.md  release.md  report_alignment_audit.md  technical_passport_target_platform.csv  threat_coverage_catalog.csv  threat_coverage_report.docx  threat_coverage_report.html  threat_coverage_summary.csv  threat_object_mapping_table.csv  threat_profile_rule_log_table.csv
examples/: README.md  custom_detector.py  gateway_client.py  monitor_simple.py  scenario_runner.py
scenarios/: attack_arm_disarm_flap.py  attack_mission_overwrite.py  attack_navigation_excursion.py  attack_param_tamper.py  run_threat_coverage.py  simulate_serial_control_detection.py  simulate_serial_control_log_flow.py  threat_coverage_catalog.json
security_agent/: __init__.py  app.py  audit.py  collector.py  config.py  detector.py  gateway.py  metrics.py  models.py  responder.py  (+2 more)
(+33 files in other folders)
