[project]
name = "drone-sec-sim"
version = "0.1.0"
description = "PX4 SITL drone security monitoring and threat coverage simulation"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "mavsdk==3.15.3",
  "cryptography==42.0.8",
  "jsonschema>=4.22.0",
]

[tool.setuptools]
packages = ["security_agent"]
